Use input parameter for server location

--- a/testpage/index.html
+++ b/testpage/index.html
@@ -27,7 +27,7 @@
     </video>
 
     <script>
-        $("video").first().annotate();
+        $("video").first().annotate("http://130.111.199.37:3000"); //External (Internal: "http://192.168.1.83:3000")
     </script>
 
 </body>
