--- a/testpage/index.html
+++ b/testpage/index.html
@@ -19,6 +19,11 @@
     <!-- Annotator Core -->
     <script type="text/javascript" src="/dist/annotator-frontend.js"></script>
     <link rel="stylesheet" href="/dist/annotator-frontend.css">
+
+    <!-- Dependencies we should include in the project instead of here -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
+
 </head>
 
 <body>
@@ -27,7 +32,13 @@
     </video>
 
     <script>
-        $("video").first().annotate("http://130.111.199.37:3000"); //External (Internal: "http://192.168.1.83:3000")
+        // Internal: "http://192.168.1.83:3000"
+        // External: "http://130.111.199.37:3000"
+        // AWS: "http://ec2-52-88-72-190.us-west-2.compute.amazonaws.com:3000"
+        // AWS IP: "52.88.72.190"
+        var serverAddress = "http://ec2-52-88-72-190.us-west-2.compute.amazonaws.com:3000";
+        var tagsAddress = "https://onomy.org/published/83/json";
+        $("video").first().annotate(serverAddress, tagsAddress);
     </script>
 
 </body>
