--- a/testpage/index.html
+++ b/testpage/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    <video width="640" height="480" playsinline>
+    <video playsinline>
         <source src="http://sachinchoolur.github.io/lightGallery/static/videos/video2.mp4" type="video/mp4">
     </video>
 
