Copy CSS styles from video to container (maintains original look)

--- a/testpage/index.html
+++ b/testpage/index.html
@@ -25,9 +25,11 @@
 </head>
 
 <body>
-    <video playsinline>
-        <source src="http://sachinchoolur.github.io/lightGallery/static/videos/video2.mp4" type="video/mp4">
-    </video>
+    <!--<div width="100%" height="100%">-->
+        <video playsinline style="margin-left: auto; margin-right: auto; display: block">
+            <source src="http://sachinchoolur.github.io/lightGallery/static/videos/video2.mp4" type="video/mp4">
+        </video>
+    <!--</div>-->
 
     <script>
         // Internal: "http://192.168.1.83:3000"
