--- a/testpage/index.html
+++ b/testpage/index.html
@@ -25,11 +25,9 @@
 </head>
 
 <body>
-    <!--<div width="100%" height="100%">-->
-        <video playsinline style="margin-left: auto; margin-right: auto; display: block">
-            <source src="http://sachinchoolur.github.io/lightGallery/static/videos/video2.mp4" type="video/mp4">
-        </video>
-    <!--</div>-->
+    <video playsinline width="640" height="480">
+        <source src="http://sachinchoolur.github.io/lightGallery/static/videos/video2.mp4" type="video/mp4">
+    </video>
 
     <script>
         // Internal: "http://192.168.1.83:3000"
